[BEAM-14145] [Website] set loop to false on desktop, add css props to fix flickering

--- a/website/www/site/assets/scss/_quotes.scss
+++ b/website/www/site/assets/scss/_quotes.scss
@@ -132,3 +132,8 @@
 #swiper-pagination-id {
   bottom: -5px;
 }
+
+.swiper-slide {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+}
